# TextCat

./: AUTHORS  Doxygen  Makefile.am  index.html  style.css
samples/: catalan
src/: Makefile.am  config.h  handlers.c  memory.c  ngrams.c  test.c  textcat.c  textcat.h  textcat_internal.h
src/client/: Makefile.am  getcat.c  learn.c  list.c
textcat/: Makefile.am  README  configure.ac  configure.in
textcat/samples/: english.txt  spanish.txt
textcat/src/: Makefile.am  handlers.c  learn.c  memory.c  ngrams.c  test.c  textcat.c  textcat.h  textcat_internal.h
textcat/src/client/: Makefile.am  getcat.c  learn.c
