AC_INIT(textcat,0.1)

AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL
AC_CONFIG_HEADERS(src/config.h)
AC_PROG_CC


AC_MSG_CHECKING(whether to enable debugging)
debug_default="yes"
AC_ARG_ENABLE(debug, [  --enable-debug=[no/yes] turn on debugging [default=${debug_default}]],, enable_debug=$debug_default)
if test "$enable_debug" = "yes"; then
    CFLAGS="$CFLAGS -g -DDEBUG"
    AC_MSG_RESULT(yes)
else
    CFLAGS="$CFLAGS -O3 -ffast-math -mcpu=v8 -mtune=ultrasparc"
    AC_MSG_RESULT(no)
fi


AC_OUTPUT([
    Makefile
    src/Makefile
    src/client/Makefile
])
